test/fixtures/type-error/global-assignment.lys
var x = 1

fun addOne(): i32 = {
  x = x + false
}